# darklight

./: .drone.yml  docker-compose.dev.yml  docker-compose.prod.yml  some-file  up.sh
client/: .dockerignore  .env.production  .gitignore  .graphqlconfig  Dockerfile  codegen.yml  next.config.js  package-lock.json  package.json
client/components/downloads/: AddDownload.tsx  DownloadingFile.tsx  ListDownloads.tsx  index.tsx
client/components/layouts/: DefaultLayout.module.scss  DefaultLayout.tsx
client/lib/: apolloClient.ts  graphql-operations.ts
client/lib/context/: DownloadsContext.tsx  requesterContext.tsx
client/lib/documents/: getDownload.graphql  getDownloads.graphql  requestDownload.graphql  subscribeDownload.graphql
client/lib/hooks/: downloads.tsx  requester.tsx
client/lib/reducers/: base.ts  download.ts
client/pages/: _app.tsx  downloads.tsx  index.tsx
client/public/: manifest.json
client/schema/: schema.graphql
client/styles/: globals.css  index.module.scss
database/: flyway.conf  migrate.sh
database/sql/: V001__add_downloads_table.sql  V002__add_fields_to_downloads.sql  V003__add_uuid_to_downloads.sql  V004__allow_some_nulls.sql  V005__set_download_id_index.sql  V006__add_percentage_to_download.sql  V007__add_requester_id_to_downloads.sql
server/: .env  Cargo.toml  Dockerfile  sqlx-data.json
server/darklight/: Cargo.toml
server/darklight/src/: main.rs
server/darklight_api/: Cargo.toml
server/darklight_api/src/: api_config.rs  download.rs  health_check.rs  lib.rs
server/darklight_app/: Cargo.toml
server/darklight_app/src/: download_queue.rs  file_downloader.rs  lib.rs
server/darklight_core/: Cargo.toml
server/darklight_core/src/: download.rs  download_state.rs  lib.rs
server/darklight_events/: Cargo.toml
server/darklight_events/src/: events.rs  lib.rs
server/darklight_events/src/models/: mod.rs
server/darklight_events/src/publisher/: mod.rs
server/darklight_events/src/subscriber/: subscriber.rs
server/darklight_graphql/: Cargo.toml
server/darklight_graphql/src/: lib.rs
server/darklight_graphql/src/darklight/: mod.rs  mutations.rs  queries.rs  subscriptions.rs
server/darklight_handlers/: Cargo.toml
server/darklight_handlers/src/: done_downloading_handler.rs  download_worker.rs  file_name_available_handler.rs  lib.rs  status_update_handler.rs
server/darklight_persistence/: Cargo.toml  sqlx-data.json
server/darklight_persistence/src/: lib.rs  postgres.rs
server/darklight_persistence/src/repos/: downloads.rs  mod.rs
server/darklight_persistence/src/repos/downloads/: add_download.sql  finish_download.sql  get_download_by_download_id.sql  get_downloads_by_requester.sql  update_file_name.sql
server/darklight_storage/: Cargo.toml
server/darklight_storage/src/: lib.rs  storage_downloader.rs  storage_uploader.rs
server/darklight_ytd/: Cargo.toml
server/darklight_ytd/src/: youtube_dl.rs
server/src/: config.rs  main.rs
server/src/api/: download.rs  mod.rs
server/src/services/: mod.rs
server/src/services/database/: mod.rs  postgres.rs
server/src/services/database/repos/: downloads.rs
server/src/services/database/repos/downloads/: finish_download.sql  get_download_by_download_id.sql  update_percentage.sql
server/src/services/download/: download.rs  download_queue.rs  download_state.rs  mod.rs
server/src/services/events/: events.rs  mod.rs
server/src/services/events/models/: mod.rs
server/src/services/events/publisher/: mod.rs
server/src/services/events/subscriber/: mod.rs  subscriber.rs
server/src/services/events/worker/: done_downloading_handler.rs  download_worker.rs  file_name_available_handler.rs  mod.rs  status_update_handler.rs  utility.rs
server/src/services/file_downloader/: mod.rs
server/src/services/file_uploader/: mod.rs
server/src/services/publisher/: mod.rs
server/src/services/storage_downloader/: mod.rs  s3_storage_downloader.rs
server/src/services/subscriber/: mod.rs
server/src/services/worker/: mod.rs
server/src/services/yt/: mod.rs
