[package]
name = "darklight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ytd-rs = { version = "0.1.7", features = ['yt-dlp'] }
rocket = {version = "0.5.0-rc.1", features=["json"]}
rocket_cors = "0.6.0-alpha1"
uuid = { version = "1.0.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
tokio = { version = "1.18.0" }
chrono = "0.4.19"
tokio-cron-scheduler = "0.7.0"