[package]
name = "darklight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.0", features = ["full"] }
envconfig = "0.10.0"
envconfig_derive = "0.10.0"
dotenv = "0.15.0"

darklight_api = { path = "../darklight_api" }
darklight_graphql = { path = "../darklight_graphql" }
darklight_ytd = { path = "../darklight_ytd" }
darklight_persistence = { path = "../darklight_persistence" }
darklight_core = { path = "../darklight_core" }
darklight_storage = { path = "../darklight_storage" }
darklight_events = { path = "../darklight_events" }
darklight_handlers = { path = "../darklight_handlers" }
darklight_app = { path = "../darklight_app" }
