[package]
name = "darklight_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.0", features = ["full"] }
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.30"
serde = "1.0.137"
serde_json = "1.0.81"
envconfig = "0.10.0"
envconfig_derive = "0.10.0"

darklight_core = { path = "../darklight_core" }
darklight_events = { path = "../darklight_events" }
darklight_storage = { path = "../darklight_storage" }
darklight_persistence = { path = "../darklight_persistence" }
darklight_ytd = { path = "../darklight_ytd" }
