[package]
name = "darklight_events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratsio = "0.4.0"
envconfig = "0.10.0"
envconfig_derive = "0.10.0"
serde = "1.0.137"
serde_json = "1.0.81"
tokio = { version = "1.18.0", features = ["full"] }
futures = "0.3.30"

darklight_core = { path = "../darklight_core" }
darklight_storage = { path = "../darklight_storage" }
