[package]
name = "darklight_events"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratsio = "0.4.1"
envconfig = "0.10.0"
envconfig_derive = "0.10.0"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.21"

darklight_core = { path = "../darklight_core" }
darklight_storage = { path = "../darklight_storage" }
