[package]
name = "darklight_graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.6"
tokio = { version = "1.18.2", features = ["full"] }
futures = "0.3.21"
async-graphql = "4.0.0"
async-graphql-axum = "4.0.0"
slab = "0.4.6"
serde = "1.0.137"
serde_json = "1.0.81"

darklight_events = {path = "../darklight_events"}
darklight_app = {path = "../darklight_app"}
darklight_core = {path = "../darklight_core"}
