[package]
name = "darklight_graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.21"
tower-http = { version = "0.5.2", features = ["cors"] }
async-graphql = "7.0.3"
async-graphql-axum = "7.0.3"
slab = "0.4.9"
serde = "1.0.197"
serde_json = "1.0.115"

darklight_events = {path = "../darklight_events"}
darklight_app = {path = "../darklight_app"}
darklight_core = {path = "../darklight_core"}
darklight_persistence = {path = "../darklight_persistence"}
