[package]
name = "darklight_persistence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate", "macros", "offline"] }
tokio = { version = "1.37.0", features = ["full"] }
envconfig = "0.10.0"
envconfig_derive = "0.10.0"
darklight_core = { path = "../darklight_core" }