[package]
name = "darklight_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-s3 = { version = "0.31.0", features = ["tokio"] }
tokio = { version = "1.18.0", features = ["full"] }
envconfig = "0.10.0"
envconfig_derive = "0.10.0"
